<resources>
    <string name="app_name">My Dog</string>
    <string name="nav_header_title">Выберите вид собаки</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Настройки</string>
    <string name="text_size">Размер текста</string>
    <string name="sittings_text_size">Настройки размера текста</string>
    <string name="cancel">Назад</string>


    <string name="home">Домашние собаки</string>
    <string name="shepherd">Пастушьи собаки</string>
    <string name="watchdogs">Сторожевые собаки</string>
    <string name="hunting">Охотничьи собаки</string>
    <string name="sled">Ездовые собаки</string>

    <string name="vaccine">Вакцинация</string>
    <string name="diet">Рацион питания</string>
    <string name="walking_time">Время выгула</string>
    <string name="feeding_time">Время кормления</string>

    <string name="home1">
            График вакцинации питомца:\n
         1.   Первая прививка  8 – 12 недель;\n
         2.   Ревакцинация  11 – 15 недель;\n
         3.   Первая вакцина от бешенства  11 – 15 недель;\n
         4.   Последняя щенячья прививка (комплексно с бешенством)  после полной смены зубов 9 – 12 месяцев;\n
         5.   Первая взрослая иммунизация  21 – 24 месяца.
    </string>
    <string name="home2">
        Мясные отходы или субпродукты – 400-500г\n
        Кости свежие - не употребляют\n
        Крупа (разная) - 500г\n
        Хлеб - 100г\n
        Овощи - 200г\n
        Молоко - давать не нужно\n
        Мука мясокостная - 10г\n
        Соль - 20г
    </string>
    <string name="home3">
        Два раза в день. Этим собакам достаточно пары прогулок утром и вечером.
        От 30 до 60 минут для большинства пород, далматинам и шипперке требуется до 120 минут.
    </string>
    <string name="home4">
        Два раза в день.\n
        Понедельник\n
        1)8:00 - мясо 2)20:00 - каша\n
        Вторник\n
        1)8:00 - мясо 2)20:00 - каша\n
        Среда\n
        1)8:00 - мясо 2)20:00 - каша\n
        Четверг\n
        1)8:00 - мясо 2)20:00 - каша\n
        Пятница\n
        1)8:00 - мясо 2)20:00 - каша\n
        Суббота\n
        1)8:00 - мясо 2)20:00 - каша\n
        Воскресенье\n
        1)8:00 - мясо 2)20:00 - каша
    </string>

    <string name="shepherd1">
        График вакцинации питомца:\n
         1.   Первая прививка  8 – 12 недель;\n
         2.   Ревакцинация  11 – 15 недель;\n
         3.   Первая вакцина от бешенства  11 – 15 недель;\n
         4.   Последняя щенячья прививка (комплексно с бешенством)  после полной смены зубов 9 – 12 месяцев;\n
         5.   Первая взрослая иммунизация  21 – 24 месяца.
    </string>
    <string name="shepherd2">
        Для кормления пастушьих собак ежемесячно используют по 30 кг муки простого помола и с разрешения
        ветеринарного врача собакам можно скармливать вареное мясо павших и вынужденно забитых животных, а также тушки сусликов и сурков.\n
        Мясные отходы или субпродукты – 400-500г\n
        Кости свежие - не употребляют\n
        Крупа (разная) - 500г\n
        Хлеб - 100г\n
        Овощи - 200г\n
        Молоко - давать не нужно\n
        Мука мясокостная - 10г\n
        Соль - 20г
    </string>
    <string name="shepherd3">
        Два-три раза в день. Эти умные собаки любят выходить несколько раз, чтобы не сойти с ума.
        Не менее 120 минут плюс дополнительные занятия для крупных пород, 60 минут для корги.
    </string>
    <string name="shepherd4">
        Два раза в день.\n
        Понедельник\n
        1)8:00 - мясо 2)20:00 - каша\n
        Вторник\n
        1)8:00 - мясо 2)20:00 - каша\n
        Среда\n
        1)8:00 - мясо 2)20:00 - каша\n
        Четверг\n
        1)8:00 - мясо 2)20:00 - каша\n
        Пятница\n
        1)8:00 - мясо 2)20:00 - каша\n
        Суббота\n
        1)8:00 - мясо 2)20:00 - каша\n
        Воскресенье\n
        1)8:00 - мясо 2)20:00 - каша
    </string>

    <string name="watchdogs1">
        График вакцинации питомца:\n
         1.   Первая прививка  8 – 12 недель;\n
         2.   Ревакцинация  11 – 15 недель;\n
         3.   Первая вакцина от бешенства  11 – 15 недель;\n
         4.   Последняя щенячья прививка (комплексно с бешенством)  после полной смены зубов 9 – 12 месяцев;\n
         5.   Первая взрослая иммунизация  21 – 24 месяца.
    </string>
    <string name="watchdogs2">
        Мясные отходы или субпродукты – 400-500г\n
        Кости свежие - не употребляют\n
        Крупа (разная) - 500г\n
        Хлеб - 100г\n
        Овощи - 200г\n
        Молоко - давать не нужно\n
        Мука мясокостная - 10г\n
        Соль - 20г
    </string>
    <string name="watchdogs3">
        Один раз в день. Эти собаки обычно с удовольствием расслабляются после долгой прогулки,
        игры на свежем воздухе и других занятий.Не менее 120 минут для крупных пород, от 30 до 60 минут для мелких пород.
    </string>
    <string name="watchdogs4">
        Два раза в день.\n
        Понедельник\n
        1)8:00 - мясо 2)20:00 - каша\n
        Вторник\n
        1)8:00 - мясо 2)20:00 - каша\n
        Среда\n
        1)8:00 - мясо 2)20:00 - каша\n
        Четверг\n
        1)8:00 - мясо 2)20:00 - каша\n
        Пятница\n
        1)8:00 - мясо 2)20:00 - каша\n
        Суббота\n
        1)8:00 - мясо 2)20:00 - каша\n
        Воскресенье\n
        1)8:00 - мясо 2)20:00 - каша
    </string>

    <string name="hunting1">
        График вакцинации питомца:\n
        1. Первая 4-6 недель Чума плотоядных, парвовирусный энтерит.
        В будущем эта вакцинация практически не повлияет на степень иммунитета взрослой собаки,
        но позволит ему выработаться раньше, в результате чего Вы сможете начать выгуливать щенка раньше,
        что благоприятно скажется на его развитии. Отечественные вакцины для этого возраста мне не встречались.\n
        2. Вторая 8-9 недель Чума плотоядных, парвовирусный энтерит, инфекционный гепатит, лептоспироз, парагрипп.\n
        3. Третья 12 недель Чума плотоядных, парвовирусный энтерит, инфекционный гепатит, лептоспироз, парагрипп,бешенство.\n
        4. Четвертая 6 месяцев Лептоспироз (при усиленной схеме), или первая вакцинация против бешенства (при бесплатной вакцине).\n
        5. Пятая 1 год и далее каждый полный год Чума плотоядных, парвовирусный энтерит, инфекционный гепатит, лептоспироз, парагрипп, бешенство.
    </string>
    <string name="hunting2">Для нормальной жизнедеятельности охотничьей собаки необходимы белки, жиры, углеводы, минеральные соли и витамины.
        Источники белка - мясо и рыбопродукты. Не менее ценны молочные продукты (пахта, обрат). Углеводы содержат мучные изделия, картофель.
        Используют животные жиры, рыбий жир и маргарин. Минеральные соли (натрий, кальций, фосфор, калий, железо и др.),
        необходимые организму для образования костных и мышечных тканей и пищеварения, входят в состав всех кормов.
        Витамины содержатся в овощах, зелени, фруктах. Дневной рацион собаки в состоянии заводской кондиции включает
        (в расчете на 1 кг ее массы): 4 - 5 г белков, 12 - 15 г углеводов, 1 - 2 г жиров (при вольерном содержании в зимнее время норма жиров удваивается).
        Самый питательный корм собак - мясопродукты и мясные отходы. Они перевариваются быстрее и легче.
        Высокой питательностью обладают печень, сердце, почки, вымя, селезенка, несколько меньшей - легкие, брыжейка, вырезки из кишок, желудок.
        В состав мясопродуктов входят также сырые кости (кроме трубчатых) и мясокостная мука.
        Раз в неделю половинную порцию мясопродуктов полезно скармливать в сыром виде - щенкам в виде фарша, а начиная с 7 - 8 мес, когда появятся все постоянные зубы, - нарезанными кусочками.
        Сырыми можно давать только свежие мясопродукты. При варке они теряют до 60 % витамина В, хлоридов и фосфатов, происходят изменения в белке.
        Мясные отходы из кишок и желудка скармливают только в вареном виде из-за возможности нахождения в них болезнетворных бактерий.\n
        Мясные отходы или субпродукты – 400-500г\n
        Кости свежие - не употребляют\n
        Крупа (разная) - 500г\n
        Хлеб - 100г\n
        Овощи - 200г\n
        Молоко - давать не нужно\n
        Мука мясокостная - 10г\n
        Соль - 20г
    </string>
    <string name="hunting3">
        Дважды и более в день. Эти активные маленькие собачки любят выходить на улицу и посмотреть, что происходит, пару раз в день.
        60 минут для большинства пород, до 120 минут для крупных пород.
    </string>
    <string name="hunting4">
        Два раза в день.\n
        Понедельник\n
        1)8:00 - мясо 2)20:00 - каша\n
        Вторник\n
        1)8:00 - мясо 2)20:00 - каша\n
        Среда\n
        1)8:00 - мясо 2)20:00 - каша\n
        Четверг\n
        1)8:00 - мясо 2)20:00 - каша\n
        Пятница\n
        1)8:00 - мясо 2)20:00 - каша\n
        Суббота\n
        1)8:00 - мясо 2)20:00 - каша\n
        Воскресенье\n
        1)8:00 - мясо 2)20:00 - каша
    </string>

    <string name="sled1">
        График вакцинации питомца:\n
         1.   Первая прививка  8 – 12 недель;\n
         2.   Ревакцинация  11 – 15 недель;\n
         3.   Первая вакцина от бешенства  11 – 15 недель;\n
         4.   Последняя щенячья прививка (комплексно с бешенством)  после полной смены зубов 9 – 12 месяцев;\n
         5.   Первая взрослая иммунизация  21 – 24 месяца.
    </string>
    <string name="sled2">
        Мясные отходы или субпродукты – 400-500г\n
        Кости свежие - не употребляют\n
        Крупа (разная) - 500г\n
        Хлеб - 100г\n
        Овощи - 200г\n
        Молоко - давать не нужно\n
        Мука мясокостная - 10г\n
        Соль - 20г
    </string>
    <string name="sled3">
        Один раз в день. Эти собаки предпочитают хорошую длительную прогулку с другой деятельностью утром или вечером.
        От 60 до 80 минут для большинства пород, до 180 минут для энергичных пород, таких как хаски.
    </string>
    <string name="sled4">
        Два раза в день.\n
        Понедельник\n
        1)8:00 - мясо 2)20:00 - каша\n
        Вторник\n
        1)8:00 - мясо 2)20:00 - каша\n
        Среда\n
        1)8:00 - мясо 2)20:00 - каша\n
        Четверг\n
        1)8:00 - мясо 2)20:00 - каша\n
        Пятница\n
        1)8:00 - мясо 2)20:00 - каша\n
        Суббота\n
        1)8:00 - мясо 2)20:00 - каша\n
        Воскресенье\n
        1)8:00 - мясо 2)20:00 - каша
    </string>
</resources>