<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_paw"
            android:title="@string/home"
            />
        <item
            android:id="@+id/nav_shepherd"
            android:icon="@drawable/ic_menu_paw"
            android:title="@string/shepherd" />
        <item
            android:id="@+id/nav_watchdogs"
            android:icon="@drawable/ic_menu_paw"
            android:title="@string/watchdogs" />
        <item
            android:id="@+id/nav_hunting"
            android:icon="@drawable/ic_menu_paw"
            android:title="@string/hunting" />
        <item
            android:id="@+id/nav_sled"
            android:icon="@drawable/ic_menu_paw"
            android:title="@string/sled" />
    </group>
</menu>